<resources>
	<string name="app_name">AmilKHU</string>
	<string name="amil_khu_napp">AMIL KHU\nAPP</string>
	<string name="assalamu_alaikum_amil_hebat">Assalamu’alaikum Amil Hebat</string>
	<string name="selamat_datang_di">Selamat datang di</string>
	<string name="amil_khu_app">AMIL KHU APP</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="login">Login</string>
	<string name="absen_masuk">Absen Masuk</string>
	<string name="absen_keluar">Absen Keluar</string>
	<string name="riwayat_kehadiran">Riwayat Kehadiran</string>
	<string name="admin_tools">Admin Tools</string>
	<string name="amil_tools">Amil Tools</string>
	<string name="invalid_field">%s tidak valid!</string>
	<string name="empty_field">%s tidak boleh kosong!</string>
	<string name="tanggal">Tanggal</string>
	<string name="jam_kerja">Jam kerja</string>
	<string name="jam_pulang">Jam pulang</string>
	<string name="jam_datang">Jam datang</string>
	<string name="permission_denied">Permission Denied!</string>
	<string name="failed_to_get_location">Failed to get location!</string>
	<string name="mendapatkan_lokasi">Mendapatkan lokasi…</string>
	<string name="catatan">Catatan</string>
	<string name="submit">Submit</string>
	<string name="already_checkin">Anda sudah absen!</string>
	<string name="already_checkout">Anda sudah absen pulang!</string>
	<string name="payment_gateway">Payment Gateway</string>
	<string name="kalkulator_zakat">Kalkulator Zakat</string>
	<string name="kehadiran_harian">Kehadiran Harian</string>
	<string name="persetujuan">Persetujuan</string>
	<string name="data_amil">Data Amil</string>
	<string name="tambah_admin">Tambah Admin</string>
	<string name="company_profile">Company Profile</string>
	<string name="pengumuman">Pengumuman</string>
	<string name="lokasi">Lokasi</string>
	<string name="not_absent_yet">Anda belum Absen Masuk!</string>
	<string name="di_kantor">Di Kantor</string>
	<string name="di_luar_kantor">Di Luar Kantor</string>
	<string name="setujui_kehadiran">Setujui Kehadiran</string>
	<string name="setujui">Setujui</string>
	<string name="tolak">Tolak</string>
	<string name="apakah_anda_yakin_untuk_menyetujui_absensi_kehadiran_ini">Apakah anda yakin untuk menyetujui absensi kehadiran ini?</string>
	<string name="accepted_attendance">Kehadiran berhasil disetujui</string>
	<string name="data_tidak_ditemukan">Data tidak ditemukan!</string>
	<string name="lihat_foto">Lihat Foto</string>
	<string name="qris">QRIS</string>
	<string name="bank_transfer">Bank Transfer</string>
</resources>