<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_4sdp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:textAppearance="@style/TextStyle.Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="@dimen/_10sdp"
                android:textSize="@dimen/_14ssp"
                android:text="@string/setujui_kehadiran"
                android:textColor="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray4" />

            <androidx.appcompat.widget.AppCompatTextView
                android:textAppearance="@style/TextStyle.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:textSize="@dimen/_12ssp"
                android:layout_marginVertical="@dimen/_16sdp"
                android:gravity="center"
                android:text="@string/apakah_anda_yakin_untuk_menyetujui_absensi_kehadiran_ini"
                android:textColor="@color/greyText" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray4" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/white"
                android:paddingVertical="@dimen/_8sdp"
                android:paddingHorizontal="@dimen/_12sdp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_deny"
                    style="@style/App.CustomTypographyStyles.Button.OutlineButton"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:text="@string/tolak"
                    android:textColor="@color/colorPrimary"
                    app:strokeColor="@color/colorPrimary" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_accept"
                    style="@style/App.CustomTypographyStyles.Button.UnelevatedButton"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:text="@string/setujui"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>

