<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<data>

	</data>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:orientation="vertical">

		<View
			android:id="@+id/view"
			android:layout_width="@dimen/_32sdp"
			android:layout_height="@dimen/_2sdp"
			android:layout_marginTop="@dimen/_8sdp"
			android:background="@drawable/rounded_top_bottomsheet" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/_8sdp"
			android:layout_marginTop="@dimen/_16sdp"
			android:orientation="horizontal"
			android:padding="@dimen/_4sdp">

			<com.google.android.material.card.MaterialCardView
				android:id="@+id/btn_daily_attendance"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginEnd="@dimen/_4sdp"
				android:layout_weight="1"
				app:cardCornerRadius="@dimen/_8sdp"
				app:cardElevation="0dp">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:orientation="vertical"
					android:padding="@dimen/_8sdp">

					<androidx.appcompat.widget.AppCompatImageView
						android:layout_width="@dimen/_50sdp"
						android:layout_height="@dimen/_50sdp"
						android:background="@drawable/ic_circle"
						android:backgroundTint="@color/green"
						android:padding="@dimen/_12sdp"
						app:srcCompat="@drawable/ic_daily_attendance" />

					<androidx.appcompat.widget.AppCompatTextView
						style="@style/TextStyle.Medium"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="@dimen/_8sdp"
						android:gravity="center"
						android:text="@string/kehadiran_harian"
						android:textColor="@color/greyText"
						android:textSize="@dimen/_10ssp" />

				</LinearLayout>

			</com.google.android.material.card.MaterialCardView>

			<com.google.android.material.card.MaterialCardView
				android:id="@+id/btn_acceptance"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/_8sdp"
				android:layout_weight="1"
				app:cardCornerRadius="@dimen/_8sdp"
				app:cardElevation="0dp">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:orientation="vertical"
					android:padding="@dimen/_8sdp">

					<androidx.appcompat.widget.AppCompatImageView
						android:layout_width="@dimen/_50sdp"
						android:layout_height="@dimen/_50sdp"
						android:background="@drawable/ic_circle"
						android:backgroundTint="@color/blueBg"
						android:padding="@dimen/_12sdp"
						app:srcCompat="@drawable/ic_accepted" />

					<androidx.appcompat.widget.AppCompatTextView
						style="@style/TextStyle.Medium"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="@dimen/_8sdp"
						android:gravity="center"
						android:text="@string/persetujuan"
						android:textColor="@color/greyText"
						android:textSize="@dimen/_10ssp" />

				</LinearLayout>

			</com.google.android.material.card.MaterialCardView>

			<com.google.android.material.card.MaterialCardView
				android:id="@+id/btn_amil_data"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/_8sdp"
				android:layout_weight="1"
				app:cardCornerRadius="@dimen/_8sdp"
				app:cardElevation="0dp">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:orientation="vertical"
					android:padding="@dimen/_8sdp">

					<androidx.appcompat.widget.AppCompatImageView
						android:layout_width="@dimen/_50sdp"
						android:layout_height="@dimen/_50sdp"
						android:background="@drawable/ic_circle"
						android:backgroundTint="@color/red"
						android:padding="@dimen/_12sdp"
						app:srcCompat="@drawable/ic_personal_data" />

					<androidx.appcompat.widget.AppCompatTextView
						style="@style/TextStyle.Medium"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="@dimen/_8sdp"
						android:gravity="center"
						android:text="@string/data_amil"
						android:textColor="@color/greyText"
						android:textSize="@dimen/_10ssp" />

				</LinearLayout>

			</com.google.android.material.card.MaterialCardView>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/_8sdp"
			android:layout_marginBottom="@dimen/_8sdp"
			android:orientation="horizontal"
			android:padding="@dimen/_4sdp">

			<com.google.android.material.card.MaterialCardView
				android:id="@+id/btn_add_admin"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginEnd="@dimen/_4sdp"
				android:layout_weight="1"
				app:cardCornerRadius="@dimen/_8sdp"
				app:cardElevation="0dp">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:orientation="vertical"
					android:padding="@dimen/_8sdp">

					<androidx.appcompat.widget.AppCompatImageView
						android:layout_width="@dimen/_50sdp"
						android:layout_height="@dimen/_50sdp"
						android:background="@drawable/ic_circle"
						android:backgroundTint="@color/darkerBlue"
						android:padding="@dimen/_12sdp"
						app:srcCompat="@drawable/ic_add_admin" />

					<androidx.appcompat.widget.AppCompatTextView
						style="@style/TextStyle.Medium"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="@dimen/_8sdp"
						android:gravity="center"
						android:text="@string/tambah_admin"
						android:textColor="@color/greyText"
						android:textSize="@dimen/_10ssp" />

				</LinearLayout>

			</com.google.android.material.card.MaterialCardView>

			<com.google.android.material.card.MaterialCardView
				android:id="@+id/btn_company_profile"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/_8sdp"
				android:layout_weight="1"
				app:cardCornerRadius="@dimen/_8sdp"
				app:cardElevation="0dp">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:orientation="vertical"
					android:padding="@dimen/_8sdp">

					<androidx.appcompat.widget.AppCompatImageView
						android:layout_width="@dimen/_50sdp"
						android:layout_height="@dimen/_50sdp"
						android:background="@drawable/ic_circle"
						android:backgroundTint="@color/orangeBg"
						android:padding="@dimen/_12sdp"
						app:srcCompat="@drawable/ic_company_profile" />

					<androidx.appcompat.widget.AppCompatTextView
						style="@style/TextStyle.Medium"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="@dimen/_8sdp"
						android:gravity="center"
						android:text="@string/company_profile"
						android:textColor="@color/greyText"
						android:textSize="@dimen/_10ssp" />

				</LinearLayout>

			</com.google.android.material.card.MaterialCardView>

			<com.google.android.material.card.MaterialCardView
				android:id="@+id/btn_announcement"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/_8sdp"
				android:layout_weight="1"
				app:cardCornerRadius="@dimen/_8sdp"
				app:cardElevation="0dp">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:orientation="vertical"
					android:padding="@dimen/_8sdp">

					<androidx.appcompat.widget.AppCompatImageView
						android:layout_width="@dimen/_50sdp"
						android:layout_height="@dimen/_50sdp"
						android:background="@drawable/ic_circle"
						android:padding="@dimen/_12sdp"
						app:srcCompat="@drawable/ic_announcement" />

					<androidx.appcompat.widget.AppCompatTextView
						style="@style/TextStyle.Medium"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="@dimen/_8sdp"
						android:gravity="center"
						android:text="@string/pengumuman"
						android:textColor="@color/greyText"
						android:textSize="@dimen/_10ssp" />

				</LinearLayout>

			</com.google.android.material.card.MaterialCardView>

		</LinearLayout>

	</LinearLayout>

</layout>